--- a/styles/first.css
+++ b/styles/first.css
@@ -142,6 +142,7 @@ line-height: 30px; /* 166.667% */
     border-radius: 10px ;
     padding-bottom: 120px;
     padding-top: 100px;
+    
 }
 .text-primary{
     color: #F00;
@@ -157,6 +158,7 @@ align-items: center;
 gap: 10px;
 color: #FFF;
 font-size: 20px;
+border:none;
 }
 .offer-item-title{
     display: flex;
@@ -173,7 +175,13 @@ font-size: 20px;
     text-align: center;
     padding-left: 50px ;
 }
-
+.edit{
+    border-radius: 50%;
+    border:25px solid red;
+    background-color:orange;
+    border-block-color:blueviolet;
+    
+}
 
 .best{
     color: #F00;
@@ -229,3 +237,19 @@ margin-right: 220px;
 margin-right: 200px;
 }
 
+.new-holiday{
+    text-align: center;
+    margin-top: 400px;
+}
+.sale-holiday{
+   color: #F00;
+}
+.item-holiday{
+
+text-align: center;
+font-family: Merriweather;
+font-size: 60px;
+
+font-weight: 900;
+
+}
