--- a/styles/first.css
+++ b/styles/first.css
@@ -1,7 +1,7 @@
 /* header styles section */
 
 .header-image{
-    background-image: url('../resources/Banner\ Image.png');
+    background-image: linear-gradient(to bottom, rgba(0,0,0,0.5),rgba(0,0,0,0)),url('../resources/Banner\ Image.png');
     background-repeat: no-repeat;
      padding: 10px;
      margin-left: 7%;
@@ -11,6 +11,7 @@
      position: relative;
      background-size: cover;
      justify-content: center;
+     
      
      
     
@@ -83,7 +84,7 @@ margin-top: 20px ;
 }
 
 .image-item{
-    background: url('../resources/Vectorrr.png');
+    background-image: linear-gradient(to bottom,rgba(0,0,0,0.5), rgba(0,0,0,0)),url('../resources/Vectorrr.png') ;
     background-repeat: no-repeat;
     width: 1320px;
     margin-left: 100px;
@@ -366,18 +367,19 @@ display: flex;
 border-radius: 0px;
 
 
+
     }
     .color-spa{
-        border-radius: 50px 50px 50px 50px;
+        border-radius: 0px 50px 50px 0px;
 background: #F00;
 width: 210px;
-height: 72px;
+height: 55px;
 flex-shrink: 0;
 text-align: center;
     }
 .tito{
     text-align: center;
-    margin: 24px 56px;
+    margin: 20px 56px;
     border:none;
     color:#FFF;
     background: #F00;
@@ -385,17 +387,116 @@ text-align: center;
 .inpo{
     border-radius: 50px;
 background: #FFF;
-width: 648px;
-height: 72px;
+width: 660px;
+height: 53px;
 flex-shrink: 0;
 color: rgba(7, 2, 17, 0.30);
 text-align: center;
 font-family: Inter;
 font-size: 18px;
 font-style: normal;
-font-weight: 400;
+font-weight: 300;
 line-height: normal;
-border-radius: 50px;
+border-radius: 50px 0px 0px 50px;
 background: #FFF;
+border:none;
+}
+/* footer styles section */
+
+.footer-item{
+    display: flex;
+    text-align: center;
+    justify-content: space-between;
+    color:white;
+    background: #070211;
+    padding-right: 300px;
+}
+.ft{
+    display: flex;
+    
+}
+.footer-title{
+    margin-right: 10px;
+    width: 24px;
+height: 24px;
+flex-shrink: 0;
+margin-top: 40px;
 
 }
+.footer-title2{
+    color: #FFF;
+font-family: Inter;
+font-size: 24px;
+font-style: normal;
+font-weight: 500;
+padding-bottom: 10px;
+line-height: 40px; /* 166.667% */
+}
+.ftt{
+    display:flex ;
+}
+.ft .ftt{
+    gap: none;
+}
+.footer-description{
+    margin-right: 10px;
+    width: 24px;
+height: 24px;
+flex-shrink: 0;
+margin-top: 10px;
+padding-top: 30px;
+}
+.footer-description2{
+    color: #FFF;
+    font-family: Inter;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+    padding-bottom: 300px;
+    padding-bottom: 270px;
+    line-height: 40px; /* 166.667% */
+}
+.last-footer{
+    color: #FFF;
+    font-family: Inter;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+    margin-left: 100px;
+    line-height: 40px; /* 166.667% */
+}
+.foot-last{
+    background-color: #070211;  
+    width: 1600px;
+    height: 609px;
+    flex-shrink: 0;
+}
+.tto{
+    width: 200%;
+   height: 1px;
+   border: 0 none;
+   margin-right: auto;
+   margin-left: auto;
+   margin-top: 400px;
+   margin-bottom: 5px;
+   background-color: rgb(209, 198, 198);
+}
+.logo{
+    display:  flex;
+    width: 90x;
+height: 90px;
+flex-shrink: 0;
+margin: 1px 200px 200px 500px;
+padding: 1px 200px 200px 40px;
+}
+.t-end{
+    width: 400%;
+    height: 1px;
+    border: 0 none;
+    margin-right: 200px;
+    margin-left: 10px;
+    margin-top: 200px;
+    justify-content: center;
+    margin-bottom: 5px;
+    background-color: rgb(209, 198, 198);
+ }
