--- a/styles/first.css
+++ b/styles/first.css
@@ -466,37 +466,43 @@ padding-top: 30px;
     line-height: 40px; /* 166.667% */
 }
 .foot-last{
-    background-color: #070211;  
-    width: 1600px;
-    height: 609px;
-    flex-shrink: 0;
+    background-color: #070211;
+    color: white;
 }
-.tto{
-    width: 200%;
-   height: 1px;
-   border: 0 none;
-   margin-right: auto;
-   margin-left: auto;
-   margin-top: 400px;
-   margin-bottom: 5px;
-   background-color: rgb(209, 198, 198);
+.foot-head{
+    display: flex;
+    text-align: center;
+    justify-content: space-around;
 }
-.logo{
-    display:  flex;
-    width: 90x;
-height: 90px;
-flex-shrink: 0;
-margin: 1px 200px 200px 500px;
-padding: 1px 200px 200px 40px;
+.call{
+    
+   
+    margin-right: 10px;
 }
-.t-end{
-    width: 400%;
-    height: 1px;
-    border: 0 none;
-    margin-right: 200px;
-    margin-left: 10px;
-    margin-top: 200px;
-    justify-content: center;
-    margin-bottom: 5px;
-    background-color: rgb(209, 198, 198);
- }
+.web{
+    margin-right: 10px;
+   
+}
+.verticle{
+    width: 1200px;
+    height: 0px;
+}
+.verti{
+    width: 1200px;
+height: 0px;
+}
+.logo-title{
+   margin: 20px 90x 20px 90px;
+   padding: 30px;
+   text-align: center;
+
+}
+.sub-title{
+    display: flex;
+    justify-content: space-around;
+}
+.right-res{
+    margin-right: 70px;
+    padding-right: 30px;
+    padding-bottom: 40px;
+}
