--- a/styles/first.css
+++ b/styles/first.css
@@ -3,15 +3,10 @@
 .header-image{
     background-image: linear-gradient(to bottom, rgba(0,0,0,0.5),rgba(0,0,0,0)),url('../resources/Banner\ Image.png');
     background-repeat: no-repeat;
-     padding: 10px;
-     margin-left: 7%;
-     padding-bottom: 1%;
-     padding-top:50px;
-     border-radius: 16px;
-     position: relative;
-     background-size: cover;
      justify-content: center;
-     
+     background-position:center;
+     display: flex;
+
      
      
     
@@ -19,8 +14,13 @@
 }
 header{
     
-    margin: 50px 140px;
-    padding-right: 100px;
+    margin-left: 200px;
+    margin-right: 1px;
+    padding-left: 1px;
+    margin-top: 50px;
+    padding-right: 1px;
+    justify-content: center;
+    text-align: center;
 }
 
 .header-item{
@@ -66,6 +66,7 @@ padding-top: 10px;
 }
 .section-title{
     text-align: center;
+    margin-left: 250px;
 }
 .offer-discount{
     color: #F00;
@@ -81,6 +82,12 @@ font-weight: 700;
 height: 600px;
 flex-shrink: 0;
 margin-top: 20px ;
+margin-left: 160px;
+justify-content: center;
+text-align: center;
+background-position: center;
+display: flex;
+border-radius:10px 10px 10px 10px;
 }
 
 .image-item{
@@ -93,8 +100,11 @@ margin-top: 20px ;
     fill: linear-gradient(90deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%);
 }
 .total-item{
-    /* text-align: center; */
-    color:#FFF
+    display:flex ;
+    justify-content: center;
+    text-align: center;
+    color:#FFF;
+    
     
 }
 .item-position{
@@ -139,10 +149,12 @@ line-height: 30px; /* 166.667% */
 .function-item{
     text-align: center;
     background-color: rgb(239, 202, 209);
-    margin: 90px 90px;
+    margin-left:230px;
+    padding-left: 60px;
     border-radius: 10px ;
     padding-bottom: 120px;
     padding-top: 100px;
+    margin-top: 50px;
     
 }
 .text-primary{
@@ -166,7 +178,7 @@ border:none;
     justify-content: center;
     align-items: center;
     min-height: 100px;
-
+    margin-left: 250px;
 }
 .new-best{
     height: 100px;
@@ -177,11 +189,11 @@ border:none;
     padding-left: 50px ;
 }
 .edit{
-    border-radius: 50%;
+    border-radius: 100%;
     border:25px solid red;
-    background-color:orange;
-    border-block-color:blueviolet;
-    
+    background-color:white;
+    /* border-block-color:blueviolet; */
+    padding: 45px;
 }
 
 .best{
@@ -241,6 +253,8 @@ margin-right: 200px;
 .new-holiday{
     text-align: center;
     margin-top: 400px;
+    margin-left: 400px;
+    padding-left: 20px;
 }
 .sale-holiday{
    color: #F00;
@@ -260,7 +274,8 @@ font-weight: 900;
     background-color: red;
     color:green;
     border-radius: 400px;
-    margin: 90px 90px;
+    
+    margin-left: 250px;
 }
 .holiday-box{
     width: 98.77px;
@@ -273,12 +288,14 @@ border-radius: 70px;
 .holiday-second{
     border-radius: 100px;
     
+    
 }
 .last-section1{
+    
     margin-right: 20px;
     width: 429px;
-height: 433px;
-flex-shrink: 0;
+    height: 433px;
+    flex-shrink: 0;
     background-image: url('../resources/Rectangle\ 1.png');
 
 }
@@ -318,16 +335,31 @@ line-height: 32px; /* 160% */
 }
 .all-item{
     justify-content: center;
-    margin-left: 30px;
-    padding-left: 40px ; 
+    margin-left: 250px;
+    padding-left: 100px ; 
 }
 .column-item{
     justify-content: center;
+    
+}
+.item-title-all{
+    margin-left: 150px;
+    padding-left: 170px;
+    justify-content: center;
+    display: flex;
+}
+.item-description{
+    margin-left: 150px;
+    padding-left: 170px;
+    justify-content: center;
+    display: flex;
 }
 
 .total-total{
     justify-content: center;
-    margin: 90px;
+    
+    
+
 }
 
 .inp{
@@ -335,7 +367,7 @@ line-height: 32px; /* 160% */
     text-align: center;
     border-radius: 16px;
     background: rgba(255, 0, 0, 0.05);
-    margin: 90px;
+    margin-left: 300px;
     margin-bottom: 20px;
     padding-bottom: 50px;
     margin-top: 5px;
@@ -468,6 +500,11 @@ padding-top: 30px;
 .foot-last{
     background-color: #070211;
     color: white;
+    width: 1900px;
+    height: 500px;
+}
+.check{
+    margin-top: 60px;
 }
 .foot-head{
     display: flex;
@@ -500,9 +537,10 @@ height: 0px;
 .sub-title{
     display: flex;
     justify-content: space-around;
+    padding-bottom: 0%;
 }
 .right-res{
     margin-right: 70px;
     padding-right: 30px;
-    padding-bottom: 40px;
+    padding-bottom: 0px;
 }
