added my final commit

--- a/styles/first.css
+++ b/styles/first.css
@@ -14,13 +14,16 @@
 }
 header{
     
-    margin-left: 200px;
+    margin-left: 300px;
     margin-right: 1px;
     padding-left: 1px;
     margin-top: 50px;
-    padding-right: 1px;
     justify-content: center;
     text-align: center;
+    padding: 20px;
+    
+
+    
 }
 
 .header-item{
